@@ -47,7 +47,8 @@ mnote_canon_tag_get_name (MnoteCanonTag t)
 {
 	unsigned int i;
 
-	for (i = 0; table[i].name; i++) if (table[i].tag == t) break;
+	for (i = 0; i < sizeof (table) / sizeof (table[0]); i++)
+		if (table[i].tag == t) break;
 	return (_(table[i].name));
 }
 
@@ -57,7 +58,8 @@ mnote_canon_tag_get_title (MnoteCanonTag t)
 	unsigned int i;
 
 	bindtextdomain (GETTEXT_PACKAGE, LIBMNOTE_LOCALEDIR); 
-	for (i = 0; table[i].title; i++) if (table[i].tag == t) break; 
+	for (i = 0; i < sizeof (table) / sizeof (table[0]); i++)
+		if (table[i].tag == t) break; 
 	return (_(table[i].title));
 }
 
@@ -67,6 +69,7 @@ mnote_canon_tag_get_description (MnoteCanonTag t)
 	unsigned int i;
 
 	bindtextdomain (GETTEXT_PACKAGE, LIBMNOTE_LOCALEDIR);
-	for (i = 0; table[i].description; i++) if (table[i].tag == t) break;
+	for (i = 0; i < sizeof (table) / sizeof (table[0]); i++)
+		if (table[i].tag == t) break;
 	return (_(table[i].description));
 }
