@@ -325,7 +325,7 @@ exif_mnote_data_olympus_get_name (ExifMnoteData *d, unsigned int i)
 
 	if (!n) return NULL;
 	if (i >= n->count) return NULL;
-	return mnote_olympus_tag_get_title (n->entries[i].tag);
+	return mnote_olympus_tag_get_name (n->entries[i].tag);
 }
 
 static const char *
